# search_app

./: .env-example  .gitignore  .pylintrc  Makefile  README.md  alembic.ini  docker-compose.yml  docs.json  fill_db_from_csv.py  fill_from_csv.py  first_fill_index.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 941329c9a0ca_async_initial.py
service/: Dockerfile  __main__.py  config.py  requirements.txt  schemas.py
service/db/: crud.py  db_settings.py  fake_db.py  mapping.py  models.py
service/elastic/: bulk_insert.py  doc_delete.py  errors.py  indexes.py  mapping.py  search.py
service/endpoints/: data_handlers.py  delete_handlers.py  get_handlers.py  index_handlers.py  put_handlers.py
service/utils/: bulk_insert.py  logic.py
tests/: conftest.py  test_logic.py
