[tool.poetry]
name = "try-elastic"
version = "0.1.0"
description = ""
authors = ["alina1412 <alina1412@mail.ru>"]
readme = "README.md"
packages = [{include = "try_elastic"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
elasticsearch = "^8.5.0"
python-dotenv = "^0.21.0"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.44"}
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "0.38.3"
uvicorn = {version = "0.20.0", extras = ["standard"]}


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
pylint = "^2.15.5"
pytest-asyncio = "^0.20.2"
httpx = "^0.23.1"
alembic = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "my: for debugging purposes",
]
asyncio_mode = "auto"